--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,15 @@
         android:maxLength="5" />
 
 
-    <TextView
-        android:id="@+id/tv_text_2"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:background="#CCCCCC" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_text_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp" />
+
+    </ScrollView>
 </LinearLayout>
